# LLM-Kernel-Tuner

./: .gitignore  README.md  parse_logs.py  pyproject.toml
.github/workflows/: docs.yml
docs/: bibliography.bib  changing_llms.rst  changing_params.rst  conf.py  custom_tuning_strategy.rst  design.rst  getting_started.rst  index.rst  performance_tracking.rst  prompts_api.rst  retry_policy.rst  spelling_namelist.txt  spelling_wordlist.txt  structured_output.rst  testing_strategies.rst  thesis_research.rst  tuning_strategies.rst  user_api.rst
examples/: example.py  llama_cpp_example.py  retry_wrapper_example.py  vllm_example.py
llm_kernel_tuner/: __init__.py  kernel_test.py  llm_kernel_transformer.py  llm_kernel_tuner_logger.py  performance_tracker.py  retry.py  structured_output.py  thinking_stripper.py  tunable_kernel.py  tuning_state.py
llm_kernel_tuner/prompts/: __init__.py  autonomous_strategy_prompts.py  explicit_strategy_prompts.py  one_prompt_strategy_prompts.py  retry_prompts.py  tester_prompts.py  transformer_prompts.py  tuning_strategy_prompts.py
llm_kernel_tuner/testing_strategies/: LLMTestExtraction.template.py  __init__.py  base_testing_strategy.py  naive_llm_tester.py
llm_kernel_tuner/tuning_strategies/: __init__.py  autonomous_tuning_strategy.py  base_tuning_strategy.py  explicit_tuning_strategy.py  one_prompt_strategy.py  tuning_step.py
